--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(to right, rgb(190, 165, 165), rgb(2, 16, 139), rgb(2, 10, 83));
+    background-image: linear-gradient(-45deg,rgb(61, 73, 185), rgb(2, 10, 83));
     transition: background 1s;
     animation: colors;
 }
