--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,15 @@
 body{
+    padding: 0px;
+    margin: 0px;
     background-image: linear-gradient(-45deg,rgb(61, 73, 185), rgb(2, 10, 83));
     transition: background 1s;
     animation: colors;
+}
+main
+{
+    background: url(https://cdn.pixabay.com/photo/2013/02/20/11/31/sunset-83796_960_720.jpg) 100% 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 /* @keyframes colors{
 
